# hyper-models

./: .gitignore  README.md  __init__.py  model_zoo.py
.github/workflows/: ci.yml  release.yml
export/hycoclip/: export_onnx.py
export/hycoclip/hf/: upload_to_hf.py
hycoclip_onnx/: README.md  common.py  compare_outputs.py  export_onnx.py  infer_onnx.py  infer_torch.py  pyproject.toml
hycoclip_onnx/hf/: README.md  upload_to_hf.py
tests/: test_core.py
